update modifier class